# l1x-wasm-llvmir-public

./: Cargo.toml  build_ebpf.sh  readme.md  rust-toolchain.toml
src/: environment_impl.rs  lib.rs  main.rs
tests/: wasm_llvmir_testsuite.rs
wat/: block.wat  br_table.wat  call_indirect.wat  if.wat  loop.wat
